--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@apollo/client": "^3.3.19",
     "@aws-amplify/cli": "^4.51.4",
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -23,6 +25,7 @@
     "graphql": "^15.5.0",
     "js-cookie": "^2.2.1",
     "react": "^17.0.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
